--- a/minesweeper/src/Style/Square.css
+++ b/minesweeper/src/Style/Square.css
@@ -2,10 +2,10 @@
 .Cell{
     width: 50px;
     height: 50px;
-    border-radius: 0;
-    border: 2px solid black;
-    background-color: gray;
-    font-size: larger;
-    padding: 0;
-    margin: 0;
+    /* border-radius: 0; */
+    /* border: 2px solid black; */
+    /* background-color: gray; */
+    /* font-size: larger; */
+    /* padding: 0;
+    margin: 0; */
 }
